--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "boids"]
-    path = projects/boids
-    url = https://github.com/DubiousDoggo/boids.git
+[submodule "projects/boids"]
+	path = projects/boids
+	url = https://github.com/DubiousDoggo/boids.git
